--- a/app/src/main/res/layout/fragment_facebook.xml
+++ b/app/src/main/res/layout/fragment_facebook.xml
@@ -57,9 +57,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginBottom="10dp"
-            android:gravity="center_horizontal"
-
-            />
+            android:gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/greeting"
@@ -84,6 +82,5 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        android:visibility="gone" />
+        android:scrollbars="vertical" />
 </LinearLayout>
